# pdfcraft

./: .gitignore  README.md  pyproject.toml  requirements.txt
gui/: app.py
pdfcraft/: __init__.py  annotate.py  cli.py  compress.py  core.py  ocr.py  redact.py  signing.py  utils.py
